[WIP] added code to start populating weather data

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
           <div
             class="row d-block border border-right-0 border-color my-3 ml-1 p-3"
           >
-            <h2>City Title</h2>
-            <p>Temperature</p>
-            <p>Humidity</p>
-            <p>Wind Speed</p>
-            <p>UV Index</p>
+            <h2 id="city-name"></h2>
+            <p id="city-temp"></p>
+            <p id="city-humidity"></p>
+            <p id="city-wind">Wind Speed</p>
+            <p id="city-uv">UV Index</p>
           </div>
           <div class="row pl-3">
             <h2>5-Day Forcast:</h2>
