--- a/index.html
+++ b/index.html
@@ -64,10 +64,14 @@
           <div
             class="row d-block border border-right-0 border-color my-3 ml-1 p-3"
           >
-            <h2 id="city-name"></h2>
+            <div class="row">
+              <h2 id="city-name"></h2>
+              <img id="weatherIcon" />
+            </div>
+
             <p id="city-temp"></p>
             <p id="city-humidity"></p>
-            <p id="city-wind">Wind Speed</p>
+            <p id="city-wind"></p>
             <p id="city-uv">UV Index</p>
           </div>
           <div class="row pl-3">
