Refactored function API calls to first gather city lat/lon and then use that information for second API call  for weather and forcast information

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <p id="city-temp"></p>
             <p id="city-humidity"></p>
             <p id="city-wind"></p>
-            <p id="city-uv">UV Index</p>
+            <p id="city-uvi"></p>
           </div>
           <div class="row pl-3">
             <h2>5-Day Forcast:</h2>
