--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
             <h2>5-Day Forcast:</h2>
           </div>
           <div class="row card-deck">
+            <!-- <div class="card text-white bg-primary mb-3 p-2">
+              <h5 class="card-title">8/16/2019</h5>
+              <img
+                class="forecast-img"
+                src="http://openweathermap.org/img/wn/10d@2x.png"
+              />
+              <p class="card-text">Temp: 86.94 F</p>
+              <p class="card-text">Humidity: 43%</p>
+            </div>
+
             <div class="card text-white bg-primary mb-3 p-2">
               <h5 class="card-title">8/16/2019</h5>
               <p class="card-text">Temp: 86.94 F</p>
@@ -97,12 +107,7 @@
               <h5 class="card-title">8/16/2019</h5>
               <p class="card-text">Temp: 86.94 F</p>
               <p class="card-text">Humidity: 43%</p>
-            </div>
-            <div class="card text-white bg-primary mb-3 p-2">
-              <h5 class="card-title">8/16/2019</h5>
-              <p class="card-text">Temp: 86.94 F</p>
-              <p class="card-text">Humidity: 43%</p>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
