Added some ajax error handling for cities that dont exist and added remaining comments to code

--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
               <h4>Search for a City:</h4>
               <div class="input-group">
                 <!-- city input for search -->
-                <input class="form-control" type="search" id="searchCity" />
+                <input
+                  class="form-control"
+                  type="text"
+                  id="searchCity"
+                  title="City to Search"
+                />
                 <div class="input-group-append">
                   <button class="btn btn-primary" id="search">
                     <i class="fas fa-search"></i>
